--- a/APICursosGratuitos.csproj
+++ b/APICursosGratuitos.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -11,6 +11,12 @@
 	<PackageReference Include="FSharp.Data" Version="5.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+	<Folder Include="StaticFiles\Images\" />
+	<Folder Include="StaticFiles\Images\" />
   </ItemGroup>
 
 </Project>
